5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1637_2445.log
== TEST (2019-04-11 10:12:45) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*C/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*C/5) + 32)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:13:13) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:13:26) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:13:59) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:13:59) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:13:59) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = int(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = int(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = int(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = int(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = int(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = int(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = int(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:00) 
-- CODE:
temp = input("C/F: ")
valor = int(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:19) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(temp - 32))/9
else:
	t = ((9*temp/5) + 32)
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t = ((9*temp/5) + 32)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:30) 
-- CODE:
temp = input("C/F: ")
valor = int(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(valor - 32))/9
else:
	t = ((9*valor/5) + 32)
	
print(t)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:41) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(valor - 32))/9
else:
	t = ((9*valor/5) + 32)
	
print(t)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:48) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(valor - 32))/9
else:
	t = ((9*valor/5) + 32)
	
print(t)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:14:56) 
-- CODE:
temp = input("C/F: ")
valor = float(input("Temperatura: "))

if (temp.upper() == "F"):
	t = (5*(valor - 32))/9
else:
	t = ((9*valor/5) + 32)
	
print(t)
-- EXECUTION TIME:
0.130137
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
